Added interactive Psudo terminal